--- a/ab.tex
+++ b/ab.tex
@@ -1,105 +1,3 @@
-% \iffalse
-\let\negmedspace\undefined
-\let\negthickspace\undefined
-\documentclass[journal,12pt,twocolumn]{IEEEtran}
-\usepackage{cite}
-\usepackage{amsmath,amssymb,amsfonts,amsthm}
-\usepackage{algorithmic}
-\usepackage{graphicx}
-\usepackage{textcomp}
-\usepackage{xcolor}
-\usepackage{txfonts}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{mathtools}
-\usepackage{gensymb}
-\usepackage{comment}
-\usepackage[breaklinks=true]{hyperref}
-\usepackage{tkz-euclide} 
-\usepackage{listings}
-\usepackage{gvv}                                        
-\def\inputGnumericTable{}                                 
-\usepackage[latin1]{inputenc}                                
-\usepackage{color}                                            
-\usepackage{array}                                            
-\usepackage{longtable}                                       
-\usepackage{calc}                                             
-\usepackage{multirow}                                         
-\usepackage{hhline}                                           
-\usepackage{ifthen}                                           
-\usepackage{lscape}
-
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{problem}{Problem}
-\newtheorem{proposition}{Proposition}[section]
-\newtheorem{lemma}{Lemma}[section]
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{example}{Example}[section]
-\newtheorem{definition}[problem]{Definition}
-\newcommand{\BEQA}{\begin{eqnarray}}
-\newcommand{\EEQA}{\end{eqnarray}}
-\newcommand{\define}{\stackrel{\triangle}{=}}
-\theoremstyle{remark}
-\newtheorem{rem}{Remark}
-\begin{document}
-
-\bibliographystyle{IEEEtran}
-\vspace{3cm}
-
-\title{ASSIGNMENT-1}
-\author{AI24BTECH11026 - Pendem nitesh sri satya$^{*}$% <-this % stops a space
-}
-\maketitle
-\newpage
-\bigskip
-
-\renewcommand{\thefigure}{\theenumi}
-\renewcommand{\thetable}{\theenumi}
-
-16.   Let $a$, $b$, $c$ be real numbers, a $\neq$ 0. If $\alpha$ is a root of $a^2x^2$+$bx$+$c$=0. $\beta$ is the root of $a^2x^2$-$bx$-$c$=0 and 0$<$$\alpha$$<$$\beta$, then the equation $a^2x^2$+$2bx$+$2c$=0 has a root $\gamma$ that always satisfies
-
-(a) $\gamma$= $\frac{\alpha+\beta}{2}$
-
-(b) $\gamma$=  $\alpha$+$\frac{\beta}{2}$
-
-(c) $\gamma$= $\alpha$
-
-(d) $\alpha$$<$$\gamma$$<$$\beta$
-
-17.   The number of solutions of the equation sin$(e)^x$ = $5^x$+$5^-x$ is
-
-(a) 0
-
-(b) 1
-
-(c) 2
-
-(d) Infinitely many
-
-18.    Let $\alpha$,$\beta$ be the roots of the equation ($x-a$)($x-b$)=$c$, $c \neq 0$ Then the roots of the equation ($x-a$)($x-b$)+$c$=0 are
-
-(a) $a,c$
-
-(b) $b,c$
-
-(c) $a,b$
-
-(d) $a+c,b+c$
-
-19.    The number of point of intersection of two curves $y$=2sin$x$ and $y$=$5x^2+2x+3$ is
-
-(a) 0
-
-(b) 1
-
-(c) 2
-
-(d) $\infty$
-
-20.    If $p,q,r$ are +ve and are in $A.P$.,the roots of quadratic equation $px^2+qx+r$ = 0 are all real for
-
-(a) $\left|\frac{r}{p}-7\right|$ $\geq$ 4$\sqrt{3}$
-
 (b) $\left|\frac{p}{r}-7\right|$ $\geq$ 4$\sqrt{3}$
 
 (c) all $p$ and $r$
@@ -150,5 +48,8 @@
 
 
 
-\end{document}
+\end{document
+
+
+
 
